@startuml
skinparam linetype ortho

entity "Local" {
  * id : int <<PK>> <<autoincrement()>>
  --
  nome : string <<UK>>
  nome_normalized : string <<UK>>
}

entity "Contrato" {
  * id : int <<PK>> <<autoincrement()>>
  --
  numero : string <<UK>>
  nome : string
  endereco : string
  cpf : string
}

entity "AF" {
  * id : int <<PK>> <<autoincrement()>>
  --
  contratoId : int <<FK>> <<Contrato_id>>
  principal : boolean
  numero : string <<UK>>
  fornecedor : string
  descricao : string <<optional>>
  data_inicio : datetime
  data_fim : datetime
  status : boolean
}

entity "Item" {
  * id : int <<PK>> <<autoincrement()>>
  --
  principalId : int <<FK>> <<principal_id>>
  localId : int <<FK>> <<Local_id>>
  descricao : string <<optional>>
  banda_maxima : int
  banda_instalada : int
  data_instalacao : datetime
  quantidade : int
  status : boolean
}

entity "Valor" {
  * id : int <<PK>> <<autoincrement()>>
  --
  itemId : int <<FK>> <<Item_id>>
  afId : int <<FK>> <<AF_id>>
  valor : int
  data_inicio : datetime
  data_fim : datetime <<optional>>
}

Local ||--o{ Item : has
Contrato ||--o{ AF : has
AF ||--o{ Item : principalItems
AF }o--o{ Item : afs
AF ||--o{ Valor : has
Item ||--o{ Valor : has

@enduml
